Fix: bug image, and toggle show menu on mobile, change height navbar

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: red;
+  background-color: #BcBc;
 }
 
 *, ::before, ::after {
@@ -13,16 +13,8 @@ body {
   margin: 0;
   padding: 0;
   outline: none;
-  background-color: #BcBc;
 }
 button {
   background: none;
   border: none;
-}
-
-.test {
-
-  width: 100%;
-  height: 200vh;
- border: 2px solid brown;
 }
