--- a/src/components/navbar/Navbar.scss
+++ b/src/components/navbar/Navbar.scss
@@ -10,6 +10,8 @@
     color: #FFF;
     top: 0;
     left: 0;
+    background: linear-gradient(to bottom, rgba(74, 74, 74, 0.6), rgba(0,0,0,0));
+    transition: background-color .8s ease-in-out;
     a {
         color: #FFF;
         text-decoration: none;
@@ -31,6 +33,7 @@
 
     &__links {
         margin-left: 20px;
+        transition: background-color .8s ease-in-out;
         .nav__link {
             text-decoration: none;
             padding: 5px 10px;
@@ -46,8 +49,8 @@
                 flex-direction: column;
                 visibility: visible;
                 width: 100%;
-                height: 100vh;
-                top: 120px;
+                height: calc(100vh - 56px);
+                top: 56px;
                 background-color: #000;
             }
             .nav__link {
